; ModuleID = '/home/carl/AnghaBench/linux/fs/ext4/extr_verity.c_ext4_read_merkle_tree_page.c'
source_filename = "/home/carl/AnghaBench/linux/fs/ext4/extr_verity.c_ext4_read_merkle_tree_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }
%struct.inode = type { i32 }

@PAGE_SHIFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.page* (%struct.inode*, i32)* @ext4_read_merkle_tree_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.page* @ext4_read_merkle_tree_page(%struct.inode* %0, i32 %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.inode*, %struct.inode** %3, align 8
  %6 = call i32 @ext4_verity_metadata_pos(%struct.inode* %5)
  %7 = load i32, i32* @PAGE_SHIFT, align 4
  %8 = ashr i32 %6, %7
  %9 = load i32, i32* %4, align 4
  %10 = add nsw i32 %9, %8
  store i32 %10, i32* %4, align 4
  %11 = load %struct.inode*, %struct.inode** %3, align 8
  %12 = getelementptr inbounds %struct.inode, %struct.inode* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %4, align 4
  %15 = call %struct.page* @read_mapping_page(i32 %13, i32 %14, i32* null)
  ret %struct.page* %15
}

declare dso_local i32 @ext4_verity_metadata_pos(%struct.inode*) #1

declare dso_local %struct.page* @read_mapping_page(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
